# kamori

./: .dockerignore  .gitignore  .mcp-registry.json  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vitest.config.js  vitest.config.js.map  vitest.config.ts
.github/: action.yml
.github/workflows/: ci.yml  docker-publish.yml  forward-logs.yml  pr.yml  release.yml
docker/: docker-entrypoint.sh
kamori-demo/: README.md  docker-compose.yml  health-check.sh  load-gen.ts  package.json
kamori-demo/express-api/: Dockerfile  package.json
kamori-demo/express-api/src/: index.js  index.js.map  index.ts
kamori-demo/fastapi-service/: Dockerfile  main.py  pyproject.toml
kamori-demo/fastify-api/: Dockerfile  package.json
kamori-demo/fastify-api/src/: index.js  (+2 more)
kamori-demo/flask-service/: Dockerfile  app.py
kamori-demo/go-service/: Dockerfile  go.mod  main.go
kamori-demo/next-app/: Dockerfile  next.config.mjs  package.json
kamori-demo/php-monolog-service/: Dockerfile  composer.json  index.php
kamori-demo/php-service/: Dockerfile  composer.json  index.php
kamori-demo/pino-service/: Dockerfile  package.json
kamori-demo/python-sdk-service/: Dockerfile  main.py
kamori-demo/winston-service/: Dockerfile  package.json
sdks/go/: README.md  SPECS.md  go.mod
sdks/php/: MIT-LICENSE  README.md  SPECS.md  composer.json
sdks/python/: README.md  SPECS.md  pyproject.toml
sdks/python/src/kamori_sdk/: __init__.py  client.py  logging_handler.py
sdks/python/tests/: test_client.py  test_logging_handler.py
(+24 files in other folders)
