[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kamori-sdk"
version = "0.1.0"
description = "Python SDK for Kamori — self-hosted log ingestion"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Logging",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/usekamori/kamori"

[tool.hatch.build.targets.wheel]
packages = ["src/kamori_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
